...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view_buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="UPDATE"
        android:background="@drawable/rounded_button_settings"

        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.012"
...
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="15dp"

            android:layout_marginBottom="19dp"
            android:layout_toStartOf="@+id/imagebutton_email"
            android:src="@drawable/instagram_icon" />

        <ImageButton
            android:id="@+id/imagebutton_email"
            android:layout_width="52dp"
            android:layout_height="49dp"
...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.236"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:textStyle="bold"
...
